test/expressions/new-expr/new-on-domain.good
new-on-domain.chpl:1: In function 'main':
new-on-domain.chpl:2: error: Attempt to 'new' a function or undefined symbol
